--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express-async-handler": "^1.2.0",
         "mongodb": "^6.5.0",
         "mongoose": "^8.2.3",
+        "multer": "^1.4.5-lts.1",
         "nodemon": "^3.1.0"
     }
 }
