add getImageForMeal endpoint, fully implemented

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.1",
         "express-async-handler": "^1.2.0",
+        "images-scraper": "^6.4.6",
         "mongodb": "^6.5.0",
         "mongoose": "^8.2.3",
         "multer": "^1.4.5-lts.1",
