--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "MIT",
     "dependencies": {
         "@google/generative-ai": "^0.3.1",
+        "chart.js": "^4.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.1",
@@ -20,6 +21,8 @@
         "mongodb": "^6.5.0",
         "mongoose": "^8.2.3",
         "multer": "^1.4.5-lts.1",
-        "nodemon": "^3.1.0"
+        "nodemon": "^3.1.0",
+        "react-chartjs-2": "^5.2.0",
+        "react-select": "^5.8.0"
     }
 }
